# Ollamigos

./: README.md  pyproject.toml  setup.ps1
output/: research_report_20251102_080817.md  research_report_20251102_115055.md  research_report_20251102_164202.md
src/agent/src/agent/: crew.py
src/agent/src/agent/config/: agents.yaml  tasks.yaml
src/agent/src/agent/tools/: __init__.py  tools.py
src/api/: api.py
src/templates/: index.html
src/tests/: test.py
